--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-pg-simple": "^10.0.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "ejs-lint": "^2.0.1",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.1",
